--- a/tpl/profile-block.html
+++ b/tpl/profile-block.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="profile-block">-->
+    <div class="profile-block">
         <div class="tab-background d-f ai-c">
             <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
             <p>Профиль</p>
