--- a/tpl/blog.html
+++ b/tpl/blog.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="blog">
         <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="settings.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Блог</p>
         </div>
         <div class="blog-content">
