--- a/tpl/choose-training.html
+++ b/tpl/choose-training.html
@@ -12,10 +12,10 @@
     <div class="choose-training">
         <div class="tab-background d-f jc-sb ai-c">
             <div>
-                <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+                <a href="magazine-tab.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
                 <p>Добавить тренировку</p>
             </div>
-            <img class="add-training" src="./../images/check-solid.svg" alt="image description">
+            <a href="magazine-tab.html"><img class="add-training" src="./../images/check-solid.svg" alt="image description"></a>
         </div>
         <div class="choose-training-block">
             <div class="container d-f fd-c ai-c">
