--- a/tpl/magazine-tab.html
+++ b/tpl/magazine-tab.html
@@ -37,9 +37,14 @@
                             <div class="tabs-days_fixed">
                                 <div class="container d-f jc-sb">
                                     <h3>Журнал</h3>
-                                    <div class="d-f">
-                                        <input type="text" id="datepicker">
-                                    </div>
+                                    <img src="../images/calendar-alt-regular.svg" alt="image description">
+                                </div>
+                                <div class="container d-f ai-c jc-sb">
+                                    <a href="#">Сб, 13 июн.</a>
+                                    <a href="#">Вчера</a>
+                                    <a href="#">Сегодня</a>
+                                    <a href="#">Завтра</a>
+                                    <a href="#">Ср, 17июн.</a>
                                 </div>
                             </div>
                             <div class="container tabs-block">
