--- a/tpl/news-tab.html
+++ b/tpl/news-tab.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="tabs-block">
                     <div id="news" class="tab-holder">
-                        <div class="tab-background d-f ai-c">
+                        <div class="tab-background d-f jc-sb ai-c">
                             <p>Новости</p>
                             <a href="search-friends.html"><img src="./../images/user-plus-solid.svg" alt="image description"></a>
                         </div>
