--- a/tpl/profile-block.html
+++ b/tpl/profile-block.html
@@ -10,8 +10,8 @@
 <body>
 <div class="wrapper">
     <div class="profile-block">
-        <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+        <div class="tab-background d-f ai-c jc-fs">
+            <a href="settings.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Профиль</p>
         </div>
         <div class="change-profile">
