--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="tabs-block">
                     <div id="profile" class="tab-holder d-f fd-c fw-w ">
-                        <div class="tab-background d-f ai-c">
+                        <div class="tab-background d-f jc-sb ai-c">
                             <p>Профиль</p>
                             <a href="settings.html"><img class="settings" src="./../images/cog-solid.svg" alt="image description"></a>
                         </div>
