--- a/tpl/programs.html
+++ b/tpl/programs.html
@@ -44,8 +44,12 @@
                                     <span>Пропорции макроэлементов</span>
                                 </div>
                                 <div class="diagram d-f ai-c">
-                                    <canvas id="myCanvas"></canvas>
-                                    <div id="myLegend"></div>
+                                    <div id="myCanvas">
+                                        <img src="../images/diagram.png" alt="image description">
+                                    </div>
+                                    <div class="diagram-details">
+
+                                    </div>
                                 </div>
                             </div>
                         </div>
