--- a/tpl/registration-popup.html
+++ b/tpl/registration-popup.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <section class="registration-popup">
         <div class="registration-popup_title d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="registration.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Регистрация</p>
         </div>
         <div class="container">
