--- a/tpl/your-parameters.html
+++ b/tpl/your-parameters.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="main">
         <section class="your-parameters">
-            <img class="arrow-back" src="../images/arrow-left-solid.svg" alt="image description">
+            <a href="../index.html"><img class="arrow-back" src="../images/arrow-left-solid.svg" alt="image description"></a>
             <div class="container d-f fd-c ai-c">
                 <div class="parameters-text">
                     <h3>Достигаем цели вместе!</h3>
