--- a/tpl/authorization-popup.html
+++ b/tpl/authorization-popup.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <section class="authorization-popup">
         <div class="container">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="registration.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <form class="d-f fd-c ai-c jc-c">
                 <input class="form-control email" type="email" placeholder="E-mail" required>
                 <input class="form-control password" type="password" placeholder="Пароль" required>
