--- a/tpl/notifications-block.html
+++ b/tpl/notifications-block.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="notifications-block">
         <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="settings.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Уведомления</p>
         </div>
         <div class="choose-notification d-f fd-c">
