--- a/tpl/search-friends.html
+++ b/tpl/search-friends.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="add-friends">
         <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="profile.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Друзья</p>
         </div>
         <div class="container d-f fd-c ai-c jc-c">
