--- a/tpl/settings.html
+++ b/tpl/settings.html
@@ -10,8 +10,8 @@
 <body>
 <div class="wrapper">
     <div class="settings-menu">
-        <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+        <div class="tab-background d-f jc-fs ai-c">
+            <a href="profile.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Настройки</p>
         </div>
         <div class="settings-block">
