--- a/tpl/support-feedback_block.html
+++ b/tpl/support-feedback_block.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="support-feedback_block">
         <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="settings.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Поддержка и обратная связь</p>
         </div>
     </div>
