--- a/tpl/terms-conditions_block.html
+++ b/tpl/terms-conditions_block.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="terms-conditions_block">
         <div class="tab-background d-f ai-c">
-            <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+            <a href="settings.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
             <p>Правила и условия</p>
         </div>
     </div>
