--- a/tpl/training-list.html
+++ b/tpl/training-list.html
@@ -12,7 +12,7 @@
     <div class="training-list">
         <div class="tab-background d-f jc-sb ai-c">
             <div>
-                <img class="arrow-back" src="./../images/arrow-white.svg" alt="image description">
+                <a href="choose-training.html"><img class="arrow-back" src="./../images/arrow-white.svg" alt="image description"></a>
                 <p>Тип тренировки</p>
             </div>
             <div class="d-f">
@@ -31,79 +31,79 @@
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="motor-sport">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/motor-sport.png" alt="image description"></label>
+                    <label for="motor-sport"><img src="./../images/motor-sport.png" alt="image description"></label>
                     <span>мотоспорт</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="table-tennis">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/table-tennis.png" alt="image description"></label>
+                    <label for="table-tennis"><img src="./../images/table-tennis.png" alt="image description"></label>
                     <span>настольный тенис</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="paraglider">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/paraglider.png" alt="image description"></label>
+                    <label for="paraglider"><img src="./../images/paraglider.png" alt="image description"></label>
                     <span>параплан</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="sailing">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/Sailing.png" alt="image description"></label>
+                    <label for="sailing"><img src="./../images/Sailing.png" alt="image description"></label>
                     <span>парусный спорт</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="pilates">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/Pilates.png" alt="image description"></label>
+                    <label for="pilates"><img src="./../images/Pilates.png" alt="image description"></label>
                     <span>пилатес</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="swimming">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/swimming.png" alt="image description"></label>
+                    <label for="swimming"><img src="./../images/swimming.png" alt="image description"></label>
                     <span>плавание</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="hike">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/hike.png" alt="image description"></label>
+                    <label for="hike"><img src="./../images/hike.png" alt="image description"></label>
                     <span>поход</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="rugby">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/rugby.png" alt="image description"></label>
+                    <label for="rugby"><img src="./../images/rugby.png" alt="image description"></label>
                     <span>регби</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="roller-skis">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/hand-bike.png" alt="image description"></label>
+                    <label for="roller-skis"><img src="./../images/hand-bike.png" alt="image description"></label>
                     <span>роликовые лыжи</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="fishing">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/fishing.png" alt="image description"></label>
+                    <label for="fishing"><img src="./../images/fishing.png" alt="image description"></label>
                     <span>рыбная ловля со спинигом</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="power-training">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/power-training.png" alt="image description"></label>
+                    <label for="power-training"><img src="./../images/power-training.png" alt="image description"></label>
                     <span>силовая тренировка</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="rock-climbing">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/rock-climbing.png" alt="image description"></label>
+                    <label for="rock-climbing"><img src="./../images/rock-climbing.png" alt="image description"></label>
                     <span>скалолазание</span>
                 </li>
                 <li class="box d-f ai-c">
                     <input type="checkbox" id="squash">
                     <span class="check"></span>
-                    <label for="skiing"><img src="./../images/squash.png" alt="image description"></label>
+                    <label for="squash"><img src="./../images/squash.png" alt="image description"></label>
                     <span>сквош</span>
                 </li>
             </ul>
