--- a/tpl/magazine-tab.html
+++ b/tpl/magazine-tab.html
@@ -79,7 +79,7 @@
                                         </div>
                                         <div class="schedule-eat">
                                             <ul>
-                                                <li class="breakfast d-f jc-sb ai-c">
+                                                <li class="breakfast d-f ai-c">
                                                     <div class="schedule-eat_text">
                                                         <h3>Завтрак</h3>
                                                         <p>Для тебя оптимально 662-926 калорий</p>
@@ -88,7 +88,7 @@
                                                         <a href="add-program.html"><img src="./../images/plus-solid.svg" alt="image description"></a>
                                                     </div>
                                                 </li>
-                                                <li class="lunch d-f jc-sb ai-c">
+                                                <li class="lunch d-f ai-c">
                                                     <div class="schedule-eat_text">
                                                         <h3>Обед</h3>
                                                         <p>Для тебя оптимально 794-1059 калорий</p>
@@ -97,7 +97,7 @@
                                                         <a href="add-program.html"><img src="./../images/plus-solid.svg" alt="image description"/></a>
                                                     </div>
                                                 </li>
-                                                <li class="dinner d-f jc-sb ai-c">
+                                                <li class="dinner d-f ai-c">
                                                     <div class="schedule-eat_text">
                                                         <h3>Ужин</h3>
                                                         <p>Для тебя оптимально 662-926 калорий</p>
@@ -106,7 +106,7 @@
                                                         <a href="add-program.html"><img src="./../images/plus-solid.svg" alt="image description"></a>
                                                     </div>
                                                 </li>
-                                                <li class="snack d-f jc-sb ai-c">
+                                                <li class="snack d-f ai-c">
                                                     <div class="schedule-eat_text">
                                                         <h3>Перекус</h3>
                                                         <p>Для тебя оптимально 0-529 калорий</p>
